Fixes right margin overflow on conference landing page side bar buttons on mobile

--- a/_sass/_redesign.scss
+++ b/_sass/_redesign.scss
@@ -376,6 +376,11 @@ $header-banner-mobile-breakpoint: 1018px;
                                 }
                             }
                         }
+                        .redesign-button--wrapper {
+                            @media screen and (max-width: 410px) {
+                                width: 100%;
+                            }
+                        }
                     }
                 }
             }
